--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h2>Demo Index</h2>
-	<a href="">Sample</a>
+	<a href="https://eiabdulsamad.github.io/demo-artlove/" target="_blank">1</a>
 </body>
 </html>
